--- a/index.html
+++ b/index.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-  <link rel="stylesheet" href="styles/base.css">
-</head>
+  <head>
+    <title>Kush Eats</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/modules.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/views.css">
+
+    <script id="about-templete" type="text/x-handlebars-template">
+      <div class="about-logo">
+        <nav>
+            <img src="img/about-us.png">
+        </nav>
+        <h2>{{name}}</h2>
+        <div>{{picurl}}</div>
+        <div class="description">{{description}}</div>
+        <div class="link">{{github}}</div>
+        <div class="link">{{linkedin}}</div>
+      </div>
+    </script>
+  </head>
 
 <body>
-  <h1>hello world</h1>
+  <header>
+      <h1>hello world</h1>
+  </header>
+  
 
 
   <!-- <link rel="stylesheet" href="/maps/documentation/javascript/demos/demos.css"> -->
   </head>
 
-  <div id="map"></div>
+  <div id="map" class="container"></div>
+
+  <div id="about-us" class="container"></div>
 
   <script>
     function initMap() {
@@ -27,9 +53,11 @@
     }
 
   </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGmy9E7atGXLPZqnePoz3JhlyeiHbHn4E&callback=initMap" async
-    defer></script>
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGmy9E7atGXLPZqnePoz3JhlyeiHbHn4E&callback=initMap" async defer></script>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
+  
 </body>
 
 
