--- a/index.html
+++ b/index.html
@@ -28,34 +28,48 @@
 
 <body>
   <header>
-      <h1>hello world</h1>
+      <img src="img/Real-logo.png" alt="">
   </header>
-  
-
-
-  <!-- <link rel="stylesheet" href="/maps/documentation/javascript/demos/demos.css"> -->
-  </head>
+  <form id="pac-input">
+  <input  class="controls" type="text" placeholder="Search Box">
+  <button>Submit ASSHOLE</button>
+  </form>
 
   <div id="map" class="container"></div>
+  
+  <script src="scripts/view/map-view.js"></script>
 
   <div id="about-us" class="container"></div>
 
-  <script>
+  <!-- <script>
     function initMap() {
       console.log('in init map');
 
       // Create a map object and specify the DOM element for display.
       var map = new google.maps.Map(document.getElementById('map'), {
-        center: { lat: -34.397, lng: 150.644 },
-        zoom: 8
+        center: { lat: 47.608013, lng: -122.335167 },
+        zoom: 11
       });
       console.log('map', map)
     }
+    function searchLocations() {
+         var address = document.getElementById("addressInput").value;
+         var geocoder = new google.maps.Geocoder();
+         geocoder.geocode({address: address}, function(results, status) {
+           if (status == google.maps.GeocoderStatus.OK) {
+            searchLocationsNear(results[0].geometry.location);
+           } else {
+             alert(address + ' not found');
+           }
+         });
+       }
 
-  </script>
+  </script> -->
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGmy9E7atGXLPZqnePoz3JhlyeiHbHn4E&callback=initMap" async defer></script>
+  
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
   
 </body>
