--- a/index.html
+++ b/index.html
@@ -39,15 +39,24 @@
   <div id="map" class="container"></div>
   
   <script src="scripts/view/map-view.js"></script>
+ 
+  <!-- Verify age popup -->
+  <div id="verify-window" class="container">
+    <div class="verify-content">
+      <form id="verify-form">
+        <h2>ARE YOU OVER 21?</h2>
 
-
+        <button id="over-21">Yes</button>
+        <button id="under-21">No</button>
+    </div>
+  </div>
 
 
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGmy9E7atGXLPZqnePoz3JhlyeiHbHn4E&callback=initMap" async defer></script>
   
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
   <script src="scripts/controller/routes.js"></script>
   <script src="scripts/model/stores.js"></script>
@@ -57,7 +66,7 @@
   <script src="scripts/view/map-view.js"></script>
   <script src="scripts/view/about-view.js"></script>
 
-  <footer class="tag">Copyright &copy; 2018 Kush Eats</a></footer>
+<footer class="tag">Copyright &copy; 2018 Kush Eats</a></footer>
 </body>
 
 
