home-view attempted

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <img src="img/Real-logo.png" alt="">
   </header>
 
-  <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+  <input id="pac-input" class="container" type="text" placeholder="Search Box">
   <!-- <button>Submit</button> -->
 
 
