--- a/index.html
+++ b/index.html
@@ -54,14 +54,12 @@
   </div>
 
 
+  <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLlLO9AmKusj7eGw_rT8e2t7MYLROTG_I&libraries=places&callback=initAutocomplete"
+    async defer></script> -->
 
 
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLlLO9AmKusj7eGw_rT8e2t7MYLROTG_I&libraries=places&callback=initAutocomplete"
-    async defer></script>
-
-
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGmy9E7atGXLPZqnePoz3JhlyeiHbHn4E&callback=initMap" async
-    defer></script> -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGmy9E7atGXLPZqnePoz3JhlyeiHbHn4E&callback=initMap" async
+    defer></script>
 
 
 
