--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <img src="img/Real-logo.png" alt="">
   </header>
 
-  <input id="pac-input" class="container" type="text" placeholder="Search Box">
+  <input id="pac-input" class="container" type="text" placeholder="Location or ZIP">
   <!-- <button>Submit</button> -->
 
 
   <div id="map" class="container"></div>
 
   <script src="scripts/view/map-view.js"></script>
- 
+
   <!-- Verify age popup -->
   <div id="verify-window" class="container">
     <div class="verify-content">
@@ -54,20 +54,16 @@
   </div>
 
 
-  <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLlLO9AmKusj7eGw_rT8e2t7MYLROTG_I&libraries=places&callback=initAutocomplete"
-    async defer></script> -->
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLlLO9AmKusj7eGw_rT8e2t7MYLROTG_I&libraries=places&callback=initAutocomplete"
+    async defer></script>
 
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGmy9E7atGXLPZqnePoz3JhlyeiHbHn4E&callback=initMap" async
-    defer></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGmy9E7atGXLPZqnePoz3JhlyeiHbHn4E&callback=initMap" async
+    defer></script> -->
 
 
-
-  
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  
-
-
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
   <script src="scripts/controller/routes.js"></script>
@@ -79,10 +75,9 @@
   <script src="scripts/view/about-view.js"></script>
 
 
-<footer class="tag">Copyright &copy; 2018 Kush Eats</a></footer>
-
+  <footer class="tag">Copyright &copy; 2018 Kush Eats</a>
+  </footer>
 
 </body>
-
 
 </html>
