verify page styled

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <h2>ARE YOU OVER 21?</h2>
 
 
-        <button id="over-21">Yes</button>
-        <button id="under-21">No</button>
+        <button id="over-21" class="button">Yes</button>
+        <button id="under-21" class="button">No</button>
     </div>
   </div>
 
