got yelp api info. working on routes and stores.js. attempting to populate

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
     crossorigin="anonymous"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
-  <script src="scripts/controller/routes.js"></script>
+  <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <script src="scripts/model/stores.js"></script>
   <script src="scripts/view/about-view.js"></script>
   <script src="scripts/view/error-view.js"></script>
   <script src="scripts/view/home-view.js"></script>
   <script src="scripts/view/map-view.js"></script>
   <script src="scripts/view/about-view.js"></script>
-
-
+  <script src="scripts/controller/routes.js"></script>
+  
   <footer class="tag">Copyright &copy; 2018 Kush Eats</a>
   </footer>
 
