--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
   <title>Kush Eats</title>
+  <link rel="icon" href="img/resize-icon-v2.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/base.css">
@@ -19,8 +20,10 @@
   <header>
     <img id="home-logo" class="container" src="img/Real-logo.png" alt="" >
     <img id="about-logo" class="container" src="img/about-us.png">
+    <div class="nav">
     <a href="/about" id="nav-btn" class="container">About</a>
     <a href="/" id="nav-btn2" class="container">Home</a>
+    </div>
   </header>
 
   <!-- Search bar container -->
