more about styling

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
   <section id="about-page" class="container">
       <div id="summary">
         <h1>We are Kush Eats</h1>
-          <p id="blurb">blah blah blah combine cannabis and food blah blah kjbesebf fsenfisenifs sefuinseiunsef sefiunseifus seiufse siebfs seifs efisefjs eyse sueyf syuefseh fsefb</p>
+          <p id="blurb">Our team wanted to create a one-stop shop for both your cannabis and junk food related queries here in Seattle so you can focus on the things that matter: finding your keys.<br><br>Smoke responsibly!</p>
       </div>
 
       <div id="names" class="row">
         <div class="column">
           <h3>Max</h3>
-            <p id="blurb">He is a cool dude who doesn't afraid of anything</p>
+            <p id="blurb">An up and coming software engineer with a couple years of experience in the tech industry as a software QA tester, but now I'm branching into the exciting world of development.</p>
         </div>
         <div class="column">
             <img id="about-pics" src="img/max.jpg">
@@ -89,7 +89,7 @@
         </div>
         <div class="column">
           <h3>Khalil</h3>
-            <p id="blurb">He is a cool dude who doesn't afraid of anything</p>
+            <p id="blurb"> I am a Seattle native who completed finished 201 and really enjoyed it so I decided to keep going. I enjoy coding because I love making new things that are useful to other people.</p>
         </div>
       </div>
         
@@ -110,7 +110,7 @@
         </div>
         <div class="column">
           <h3>Tim</h3>
-            <p id="blurb">He is a cool dude who doesn't afraid of anything</p>
+            <p id="blurb">Originally from Long Island, NY and coming up on a year in Seattle. I’ve played music for a number of years and toured all over. Now I’m looking to explore my horizons a bit and learn the skills to do some neat programming. </p>
         </div>
       </div>
   </section>
