--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
           <img id="home-logo" class="container" src="img/Real-logo.png">
             <h2>&ensp;Your #1 source for munchie relief</h2>
             <nav class="main-nav">
-              <!-- TODO: Add a hamburger menu icon here, which will show/hide depending on screen width (desktop vs. mobile). -->
-              <label class="icon-menu" content="\e902"></label>
+                <!-- <label class="icon-menu" content="\e902"><img src="img/Hamburger_icon.svg.png"></label> -->
               <ul>
                 <li class="tab" data-content="home"><a href="/" id="nav-btn2">Home</a></li>
                 <li class="tab" data-content="about"><a href="/about" id="nav-btn">About</a></li>
@@ -96,7 +95,7 @@
         <div id="names" class="row">
         <div class="column">
           <h3>Steph</h3>
-            <p id="blurb">He is a cool dude who doesn't afraid of anything</p>
+            <p id="blurb">I grew up in University Place, moved to Boston for college for four years and came back here. I was in real estate previously and it didn't feel like I was growing enough. I'm attracted to the challenges software dev work gives. </p>
         </div>
         <div class="column">
             <img id="about-pics" src="img/steph.jpg">
