got content to show up in googles infowindow

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- Search bar container -->
   <section>
-  <input id="pac-input" class="container" type="text" placeholder="Location or ZIP">
+  <input id="pac-input" class="container" type="text" placeholder="Enter your ZIP">
   </section>
 
    <!-- Verify age popup -->
