--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
     <img src="img/Real-logo.png" alt="">
   </header>
 
-
   <input id="pac-input" class="container" type="text" placeholder="Location or ZIP">
-  <!-- <button>Submit</button> -->
-
 
   <div id="map" class="container"></div>
 
@@ -47,23 +44,15 @@
     <div class="verify-content">
       <form id="verify-form">
         <h2>ARE YOU OVER 21?</h2>
-
-
         <button id="over-21">Yes</button>
         <button id="under-21">No</button>
     </div>
   </div>
 
-
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLlLO9AmKusj7eGw_rT8e2t7MYLROTG_I&libraries=places&callback=initAutocomplete"
     async defer></script>
 
-
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGmy9E7atGXLPZqnePoz3JhlyeiHbHn4E&callback=initMap" async
-    defer></script> -->
-
-
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
