moved search bar, editted nav buttons

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   </header>
 
   <!-- Search bar container -->
-  <section>
+<div>
   <input id="pac-input" class="container" type="text" placeholder="Enter your ZIP">
-  </section>
+</div>
 
    <!-- Verify age popup -->
    <div id="verify-window" class="container">
@@ -57,6 +57,7 @@
         <div class="column" id="left-column">
           <h3>Max</h3>
             <p id="blurb">An up and coming software engineer with a couple years of experience in the tech industry as a software QA tester, but now I'm branching into the exciting world of development.</p>
+            <a href="https://github.com/MinMaxed/" class="github" target="_blank"><img src="img/github-icon.png"> </a>
         </div>
         <div class="column">
             <img id="about-pics" src="img/max.jpg">
@@ -70,6 +71,7 @@
         <div class="column">
           <h3>Khalil</h3>
             <p id="blurb"> I am a Seattle native who completed finished 201 and really enjoyed it so I decided to keep going. I enjoy coding because I love making new things that are useful to other people.</p>
+            <a href="https://github.com/khalahm253" class="github" target="_blank"><img src="img/github-icon.png"> </a>
         </div>
       </div>
         
@@ -77,6 +79,7 @@
         <div class="column">
           <h3>Steph</h3>
             <p id="blurb">I grew up in University Place, moved to Boston for college for four years and came back here. I was in real estate previously and it didn't feel like I was growing enough. I'm attracted to the challenges software dev work gives. </p>
+            <a href="https://github.com/indigoshock" class="github" target="_blank"><img src="img/github-icon.png"> </a>
         </div>
         <div class="column">
             <img id="about-pics" src="img/steph.jpg">
@@ -90,6 +93,7 @@
         <div class="column">
           <h3>Tim</h3>
             <p id="blurb">Originally from Long Island, NY and coming up on a year in Seattle. I’ve played music for a number of years and toured all over. Now I’m looking to explore my horizons a bit and learn the skills to do some neat programming. </p>
+            <a href="https://github.com/alpacapicnic" class="github" target="_blank"><img src="img/github-icon.png"> </a>
         </div>
       </div>
   </section>
